--- a/src/scss/components/_ImageAndTextBoxes.scss
+++ b/src/scss/components/_ImageAndTextBoxes.scss
@@ -15,6 +15,12 @@
   padding-top: 56px;
   padding-bottom: 64px;
 
+  @include media-breakpoint-up(md) {
+    padding-top: 96px;
+    padding-bottom: 128px;
+  }
+
+
   &__image {
     margin-bottom: 40px;
     @include media-breakpoint-up(md) {
